--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/http/server.ts",
-  "scripts": {
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/http/server.ts",
+    "scripts": {
     "start": "tsx src/http/server.ts",
     "dev": "tsx watch src/http/server.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
+},
+    "keywords": [],
+    "author": "Wesley Petitemberte",
+    "license": "ISC",
+    "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.13.13",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
-  },
-  "dependencies": {
+},
+    "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.14.0"
-  }
+    }
 }
