--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,29 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "",
+    "description": "Node.js 20.12.2 with Express 4.21.2 and MySQL 3.14.0",
     "main": "src/http/server.ts",
     "scripts": {
-    "start": "tsx src/http/server.ts",
-    "dev": "tsx watch src/http/server.ts"
-},
+        "start": "tsx src/http/server.ts",
+        "dev": "tsx watch src/http/server.ts"
+    },
     "keywords": [],
     "author": "Wesley Petitemberte",
     "license": "ISC",
     "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.13",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
-},
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^22.13.13",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.2"
+    },
     "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mysql2": "^3.14.0"
+        "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.14.0"
     }
 }
