--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "author": "Wesley Petitemberte",
+  "description": "Angular 19.1.0 with Bootstrap 5.3.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
